fix participant view border not stretching full height
- Put  `min-height: 100vh` on app instead of using `100%` on html, body, etc.
- remove some dead code

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -16,7 +16,6 @@
 .fade-enter-active,
 .fade-leave-active {
   transition: all 1s;
-  // position: absolute;
 }
 
 .fade-enter,
@@ -52,18 +51,14 @@
   box-shadow: 2px 2px 18px lightgray;
 }
 
-html {
-  height: 100%;
-}
-
 body {
-  min-height: 100%;
   font-family: "Open Sans", sans-serif;
   color: var(--black);
   line-height: 1.4;
   display: flex;
   flex-direction: column;
 }
+
 main {
   flex-grow: 1;
 }
@@ -147,13 +142,8 @@ img {
   padding: 0 1rem;
 }
 
-html,
-body {
-  height: 100%;
-}
-
 #app {
-  min-height: 100%;
+  min-height: 100vh;
 }
 
 @media (min-width: 50rem) {
